--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,5 +12,11 @@ and open the template in the editor.
     </head>
     <body>
         <div>Witaj świecie</div>
+         <div>Witaj świecie</div>
+          <div>Witaj świecie</div>
+           <div>Witaj świecie</div>
+            <div>Witaj świecie</div>
+             <div>Witaj świecie</div>
+              <div>Witaj świecie</div>
     </body>
 </html>
