--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,9 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>ala ma kota</div>
-          <div>ala ma kota</div>
-            <div>ala ma kota</div>
-              <div>ala ma kota</div>
+        <div>Witaj świecie</div>
+          
     </body>
 </html>
